- Change (Linux): Tweaked the compiler and linker settings to reduce the binary size
- Bugfix: PLRendererOpenGL & PLRendererOpenGLES2: Automatic texture uncompression was broken ("Passing "empty" images to the GPU no longer creates internal image data"-change in PixelLight 0.9.6-R1)
- Bugfix: "PLEngine::EngineApplication": The clear color hint within scenes was broken


Changes in PixelLight 0.9.8-R1 (released on August 23, 2011 - one year after the first public PixelLight release and nearly 9 years after development start on September 16, 2002)
  Please note that this release comes with several breaking changes with the goal to simplify the overall structure of PixelLight, have a look into the diaries (Git repository) for details
- Feature: Applications, including their lifecyle, are now controlled by frontends in order to make the PixelLight technology usable for more use cases
- Feature: Added a null frontend without any GUI involved, useful for example when only rendering into background buffers
- Feature: Added a lightweight native OS frontend
- Feature: Added a frontend for PixelLight's own GUI system (uniform for OS & ingame) perfectly integrated into the complete system
- Feature: Added a frontend and adapter for Qt (Qt is a cross-platform application and UI framework, http://qt.nokia.com/) to bring PixelLight and Qt together
- Feature: Added plugin "PLAssimp" using "ASSIMP - Open Asset Import Library" in order to provide loader implementations for 3ds, obj, Blender, Collada etc.
- Feature: Now using the new language keyword "override" from C++0x in order to give the compiler a chance to detect and blame more errors related to overwriting methods
- Feature: Clang (http://clang.llvm.org/) v3.0 (currently in development) is now supported
- Feature: Connected "PLInput::Control" to the RTTI as well as the derived classes "PLInput::Axis", "PLInput::Button", "PLInput::Effect" and "PLInput::LED" (meaning they can now be used e.g. by scripts)